# web

./:  .pre-commit-config.yaml  README.md  alembic.ini  auth.py  base.html  config.py  crud.py  data.json  database.py  database.sql  dependencies.py  docker-compose.yml  dockerfile  index.html  login.html  main.js  main.py  models.py  pages.py  post_form.html  post_view.html  posts.html  profile.html  pyproject.toml  register.html  requirements.txt  routes.py  storage.py  struct.txt  styles.css  table.sql  test_auth.py  test_crud.py
app/: main.py  models.py  pages.py  routes.py  storage.py
app/templates/: base.html  index.html  post_form.html  post_view.html
